--- a/src/app/songs-list/songs-list.page.html
+++ b/src/app/songs-list/songs-list.page.html
@@ -1,7 +1,51 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>songs-list</ion-title>
+    <ion-title>Listado de canciones</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> hola </ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let song of songs" size="12" size-md="4">
+        <ion-card>
+          <img
+            alt="{{song?.song_name}}"
+            src="https://p4.wallpaperbetter.com/wallpaper/561/139/745/bocchi-the-rock-anime-anime-girls-hd-wallpaper-preview.jpg"
+          />
+          <ion-card-header>
+            <ion-card-title>{{song?.artist}}</ion-card-title>
+            <ion-card-subtitle>{{song?.song_name}}</ion-card-subtitle>
+          </ion-card-header>
+
+          <ion-card-content class="song-list__container--button">
+            <ion-button
+              fill="outline"
+              size="small"
+              [routerLink]="['/edit/', song?._id]"
+            >
+              Editar
+              <ion-icon slot="start" name="create"></ion-icon>
+            </ion-button>
+
+            <ion-button
+              fill="outline"
+              size="small"
+              color="danger"
+              (click)="deleteAlert(song?._id)"
+            >
+              Borrar
+              <ion-icon slot="start" name="trash"></ion-icon>
+            </ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button (click)="formAlert()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+</ion-content>
